--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     eruda.init();
 </script>
 
+<script>
 // Service Worker Registration (if you have one)
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
@@ -60,6 +61,7 @@ if ('serviceWorker' in navigator) {
     });
   });
 }
+</script>
     
   </body>
 </html>
