--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body class="bg-lightBackground text-lightText dark:bg-darkBackground dark:text-darkText">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  //script src="main.js"></script
+  //script src="main.js" removed script from both sides
     
     !-- Load UserScripts -->
     <script src="userscripts.js"></script>
