--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script type="module" src="/src/main.tsx"></script>
 
     
-    !-- Load UserScripts -->
+    <!-- Load UserScripts -->
    // script src="userscripts.js" removed script script
     
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
