--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     
     <!-- Load UserScripts -->
-   // script src="userscripts.js" removed script script
+   <script> script src="userscripts.js" removed script script </script>
     
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>
