--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="index.css">
     
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/icons/favicon.svg" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/icons/site.webmanifest" />
-
+    <link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/icons/site.webmanifest" />
    
     <!-- PWA Meta Tags -->
     <meta name="msapplication-TileColor" content="#ffffff">
